--- a/operators.ipynb
+++ b/operators.ipynb
@@ -653,6 +653,129 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "<class 'int'>\n",
+      "1.234\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=1.234\n",
+    "z1=int(x)\n",
+    "print(z1)\n",
+    "print (type(z1))\n",
+    "print(x)\n",
+    "print (type(x))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is beautiful house\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"This is beautiful house\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi i m here when u will come\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hi i m here\",\"when u will come\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello  how  doing\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\",\"how\",\"doing\",sep='  ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello o how o doing\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\",\"how\",\"doing\",sep=' o ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i will purchase 10 apple today\n"
+     ]
+    }
+   ],
+   "source": [
+    "qty=10\n",
+    "fruit='apple'\n",
+    "print(\"i will purchase\",qty,fruit,'today')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name='digipodium'\n",
+    "type_of_a_company=\"educational\"\n",
+    "print(f\"name\")"
+   ]
   }
  ],
  "metadata": {
