--- a/operators.ipynb
+++ b/operators.ipynb
@@ -768,14 +768,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i m doing python coaching from digipodium its a educational\n"
+     ]
+    }
+   ],
    "source": [
     "name='digipodium'\n",
     "type_of_a_company=\"educational\"\n",
-    "print(f\"name\")"
+    "print(\"i m doing python coaching from\",name,\"its a\",type_of_a_company)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45 / 9 is equal to 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=45\n",
+    "b=9\n",
+    "c=a/b\n",
+    "print(a,'/',b,'is equal to',c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "python vesion before3.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45/9is equal to 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=45\n",
+    "b=9\n",
+    "c=a/b\n",
+    "print('{}/{}is equal to {}'.format(a,b,c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "f string style after version 3.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45/9 is equal to 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{a}/{b} is equal to {c}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "using c like format string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45/9 is equal to 5.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('%d/%d is equal to %f'%(a,b,c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/3 => 3.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=10/3\n",
+    "print(f'10/3 => {a:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
