--- a/operators.ipynb
+++ b/operators.ipynb
@@ -882,20 +882,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10/3 => 3.33\n"
+      "a => 3.33\n"
      ]
     }
    ],
    "source": [
     "a=10/3\n",
-    "print(f'10/3 => {a:.2f}')"
+    "print(f'a => {a:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ayush\n"
+     ]
+    }
+   ],
+   "source": [
+    "name='ayush'\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100/7\n"
+     ]
+    }
+   ],
+   "source": [
+    "try1='100/7'\n",
+    "print(try1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.285714285714286\n"
+     ]
+    }
+   ],
+   "source": [
+    "try2=100/7\n",
+    "print(try2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100/7 => 14.28571\n"
+     ]
+    }
+   ],
+   "source": [
+    "try3=100/7\n",
+    "print(f'100/7 => {try3:.5f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "try4 => 14.28571\n"
+     ]
+    }
+   ],
+   "source": [
+    "try4=100/7\n",
+    "print(f'try4 => {try4:.5f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum of two no is 69\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=34+35\n",
+    "print(\"sum of two no is\",b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y is greater than x\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=3\n",
+    "y=4\n",
+    "if x>y:\n",
+    " print(\"x is greater than y\")\n",
+    "print(\"y is greater than x\")"
    ]
   },
   {
