--- a/control flow i .ipynb
+++ b/control flow i .ipynb
@@ -296,11 +296,299 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stop\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=5\n",
+    "while x<5:\n",
+    "    print('run')\n",
+    "\n",
+    "x+=1\n",
+    "print(\"stop\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the sum is  1\n",
+      "the sum is  3\n",
+      "the sum is  6\n",
+      "the sum is  10\n",
+      "the sum is  15\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=5\n",
+    "sum=0\n",
+    "i=1\n",
+    "while i<=n:\n",
+    "    sum=sum+i\n",
+    "    i=i+1\n",
+    "    print(\"the sum is \",sum)    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "0\n",
+      "5\n",
+      "6\n",
+      "0\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,0,5,6,0,8]\n",
+    "for i in a:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,0,5,6,0,8]\n",
+    "for i in a:\n",
+    " if i==0:\n",
+    "    continue\n",
+    " print(i)\n",
+    "     \n",
+    " \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,0,5,6,0,8]\n",
+    "for i in a:\n",
+    " if i!=0:\n",
+    "    print(i*2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i in range(1,10):\n",
+    " if i!=0:\n",
+    "    print(i*2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=1\n",
+    "while x<10:\n",
+    "     print(x)\n",
+    "     x+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the value of i is 1\n",
+      "the value of i is 4\n",
+      "the value of i is 7\n",
+      "the value of i is 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "i=1\n",
+    "while i<=10:\n",
+    "    print(\"the value of i is\",i)\n",
+    "    i+=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=8\n",
+    "i*=2\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.8284271247461903\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=8\n",
+    "i**=0.5\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we have apple\n",
+      "we have banana\n",
+      "we have grapes\n",
+      "thats all\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits=['apple','banana','grapes']\n",
+    "for fruit in fruits:\n",
+    "    print(\"we have\",fruit)\n",
+    "else:\n",
+    "    print(\"thats all\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "  "
+   ]
   },
   {
    "cell_type": "code",
