--- a/string utility.ipynb
+++ b/string utility.ipynb
@@ -466,7 +466,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x=[]\n",
+    "for i in range:\n",
+    "    inp="
+   ]
   }
  ],
  "metadata": {
