--- a/listfun.ipynb
+++ b/listfun.ipynb
@@ -80,6 +80,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Herman', 'Rita', 'SAM', 'don']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names=['Herman','Rita','SAM','Sita']\n",
+    "names[3]= 'don'\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
