--- a/dictionary.ipynb
+++ b/dictionary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "40"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "110"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -253,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 3)\n"
+      "(6, 3)\n"
      ]
     }
    ],
@@ -270,10 +270,250 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MOVIES={\n",
+    "    'INCEPTION':{\n",
+    "        'YEAR':2010,\n",
+    "        'RATING':8.8,\n",
+    "    },\n",
+    "    'THE DARKER KNIGHT':{\n",
+    "        'YEAR':2008,\n",
+    "        'RATING':9.0\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MOVIES.get('THE DARKER KNIGHT').get('RATING')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marks.update({'Grace':40,'Bony':70,'Eyda':60})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alan': 60, 'Adya': 40, 'Simran': 50, 'Rita': 60, 'Grace': 40, 'Bony': 70, 'Eyda': 60}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(marks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alan': 60, 'Adya': 40, 'Simran': 50, 'Rita': 60, 'Bony': 70, 'Eyda': 60}\n"
+     ]
+    }
+   ],
+   "source": [
+    "marks.pop('Grace')\n",
+    "print(marks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Adya': 40, 'Simran': 50, 'Rita': 60, 'Bony': 70, 'Eyda': 60}\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "item_data_was_removed=marks.pop('Alan')\n",
+    "print(marks)\n",
+    "print(item_data_was_removed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marks.get('Adya')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "marks.get('Simran')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=[23,45,67,45,23]\n",
+    "x2=[]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 45, 67, 45, 23]\n",
+      "[529]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in x:\n",
+    " sqr =i**2\n",
+    "x2.append(sqr)\n",
+    "print(x)\n",
+    "print(x2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[529, 2025, 4489, 2025, 529]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#how to append directly\n",
+    "#comprehension- when u want to create a list from othe list\n",
+    "# newlist=[operation loop condition]\n",
+    "x3=[i**2 for i in x]\n",
+    "print(x3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n",
+      "[2, 3, 1, 4, 5, 6, 8, 5, 7] [2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[2,3,1,4,5,6,8,5,7]\n",
+    "even_no=[i for i in a if i%2==0]\n",
+    "odd_no=[i for i in a if i%2!=0]\n",
+    "print(even_no)\n",
+    "print(a,even_no)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8] [3, 1, 5, 5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[2,3,1,4,5,6,8,5,7]\n",
+    "even_no=[i for i in a if i%2==0]\n",
+    "odd_no=[i for i in a if i%2!=0]\n",
+    "print(even_no,odd_no)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name=['Stayam Maan','Alia Tiwari','Sona Sherma','Srhisti Dixit']\n",
+    "initial_names=[]"
+   ]
   }
  ],
  "metadata": {
