--- a/dictionary.ipynb
+++ b/dictionary.ipynb
@@ -487,6 +487,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, False, False, True, False, True, True, False, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[2,3,1,4,5,6,8,5,7]\n",
+    "ev_no=[i%2==0 for i in a]\n",
+    "print(ev_no)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
    "outputs": [
@@ -507,12 +526,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['n', 'i', 'a', 't']\n"
+     ]
+    }
+   ],
    "source": [
     "name=['Stayam Maan','Alia Tiwari','Sona Sherma','Srhisti Dixit']\n",
-    "initial_names=[]"
+    "initial_names=[f'{n.split()[-1][-1]}'for n in name]\n",
+    "print(initial_names)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ayush = 01234\n",
+    "my name is ayush mishra 0 1 2 3 4"
    ]
   }
  ],
