--- a/string utility.ipynb
+++ b/string utility.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "1"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,16 +111,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: once upon a time there was a village named Shankarpur ,one day\n"
+     ]
+    }
+   ],
    "source": [
     "print('a:',story)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +225,7 @@
        "60"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +246,7 @@
        "60"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -303,16 +311,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'once upon a time there was a town named Shankarpur ,once upon a town'"
+       "'once upon a time there was a town named Shankarpur ,once upon a programmer'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,16 +331,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'once upon a time there was a town named Shankarpur ,once upon a village'"
+       "'once upon a time there was a town named Shankarpur ,once upon a programmer'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,14 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nc upn  tm thr ws  vllg nmd Shnkrpur ,nc upn  vllg\n"
+      "nc upn  tm thr ws  vllg nmd Shnkrpur ,nc upn  prgrmmr\n"
      ]
     }
    ],
@@ -364,14 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nc pn  tm thr ws  twn nmd Shnkrpr ,nc pn  twn\n"
+      "nc pn  tm thr ws  vllg nmd Shnkrpr ,nc pn  prgrmmr\n"
      ]
     }
    ],
@@ -384,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +420,7 @@
        "'amisha'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +440,7 @@
        "'amisha            '"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +460,7 @@
        "'            amisha'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,9 +471,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2134767836.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [23]\u001b[1;36m\u001b[0m\n\u001b[1;33m    inp=\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "x=[]\n",
     "for i in range:\n",
