--- a/control flow i .ipynb
+++ b/control flow i .ipynb
@@ -351,6 +351,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'num' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\LENOVO\\OneDrive\\Documents\\AMISHA DIGI\\control flow i .ipynb Cell 18\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/LENOVO/OneDrive/Documents/AMISHA%20DIGI/control%20flow%20i%20.ipynb#ch0000029?line=3'>4</a>\u001b[0m \u001b[39mwhile\u001b[39;00m i\u001b[39m<\u001b[39m\u001b[39m=\u001b[39mn:\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/LENOVO/OneDrive/Documents/AMISHA%20DIGI/control%20flow%20i%20.ipynb#ch0000029?line=4'>5</a>\u001b[0m     \u001b[39msum\u001b[39m\u001b[39m=\u001b[39m\u001b[39msum\u001b[39m\u001b[39m+\u001b[39mi\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/LENOVO/OneDrive/Documents/AMISHA%20DIGI/control%20flow%20i%20.ipynb#ch0000029?line=5'>6</a>\u001b[0m     num\u001b[39m=\u001b[39mnum\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/LENOVO/OneDrive/Documents/AMISHA%20DIGI/control%20flow%20i%20.ipynb#ch0000029?line=6'>7</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mthe sum is \u001b[39m\u001b[39m\"\u001b[39m,\u001b[39msum\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'num' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "n=5\n",
+    "sum=0\n",
+    "i=1\n",
+    "while i<=n:\n",
+    "    sum=sum+i\n",
+    "    n=n+1\n",
+    "    print(\"the sum is \",sum)    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -434,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -444,18 +471,13 @@
       "2\n",
       "4\n",
       "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n"
+      "8\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "for i in range(1,10):\n",
+    "for i in range(1,5):\n",
     " if i!=0:\n",
     "    print(i*2)"
    ]
