--- a/datascience/imagevision.ipynb
+++ b/datascience/imagevision.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2"
+    "import cv2\n",
+    "import mediapipe as mp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +30,106 @@
     "    state,frame=video.read()\n",
     "    if not state:\n",
     "            break\n",
-    "    cv2.inshow('video output',frame)\n",
-    "    if cv2.waitkey(1) --27:\n",
+    "    cv2.imshow('video output',frame)\n",
+    "    if cv2.waitKey(1) ==27:\n",
     "            break\n",
     "    video.release()\n",
-    "    v2.destroyAllWindows()"
+    "    cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def webcam(webcam_idx=0):\n",
+    "    video=cv2.VideoCapture(webcam_idx)\n",
+    "    while True:\n",
+    "     state,frame=video.read()\n",
+    "     if not state:\n",
+    "            break\n",
+    "     cv2.imshow('video output',frame)\n",
+    "     if cv2.waitKey(1) ==27:\n",
+    "            break\n",
+    "    video.release()\n",
+    "    cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "webcam()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recorder(webcam_idx=0,recording_file='recording.avi'):\n",
+    "    video=cv2.VideoCapture(webcam_idx)\n",
+    "    fourcc=cv2.VideoWriter_fourcc(*'XVID')\n",
+    "    out=cv2.VideoWriter(recording_file,fourcc,20.0,(640,480))\n",
+    "    while True:\n",
+    "     state,frame=video.read()\n",
+    "     if not state:break\n",
+    "     cv2.imshow('video output',frame)\n",
+    "     out.write(frame)\n",
+    "     if cv2.waitKey(1) ==27:\n",
+    "            break\n",
+    "    out.release()#save file    \n",
+    "    video.release()\n",
+    "    cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recorder(recording_file='example_webcam.avi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def face_detection(webcam_idx=0):\n",
+    "    mp_face_detection = mp.solutions.face_detection\n",
+    "    mp_drawing = mp.solutions.drawing_utils\n",
+    "    cap = cv2.VideoCapture(webcam_idx)\n",
+    "    with mp_face_detection.FaceDetection(model_selection=0, min_detection_confidence=0.7) as face_detection:\n",
+    "        while cap.isOpened():\n",
+    "            success, image = cap.read()\n",
+    "            if not success:\n",
+    "                print(\"Ignoring empty camera frame.\")\n",
+    "                continue\n",
+    "            image.flags.writeable = False\n",
+    "            image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "            results = face_detection.process(image)\n",
+    "            image.flags.writeable = True\n",
+    "            image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
+    "            if results.detections:\n",
+    "                for detection in results.detections:\n",
+    "                    mp_drawing.draw_detection(image, detection)\n",
+    "            cv2.imshow('MediaPipe Face Detection', cv2.flip(image, 1))\n",
+    "            if cv2.waitKey(1) == 27:\n",
+    "                break\n",
+    "    cap.release()\n",
+    "    cv2.destroyAllWindows()\n",
+    "\n",
+    "# calling the fun\n",
+    "face_detection()\n",
+    "\n",
+    " "
    ]
   },
   {
@@ -41,7 +137,64 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def webcam_w_info(webcam_idx = 0):\n",
+    "    video = cv2.VideoCapture(webcam_idx)\n",
+    "    while True:\n",
+    "        state, frame = video.read()\n",
+    "        if not state:\n",
+    "            break\n",
+    "        cv2.rectangle(frame, (0,0), (640,50), (255,255,255), -1)\n",
+    "        cv2.putText(frame,\"webcam output from laptop\",(100,30),cv2.FONT_HERSHEY_SIMPLEX,1,(0,0,0))\n",
+    "        cv2.putText(frame,'camera 0', (10,450), cv2.FONT_HERSHEY_SIMPLEX, .5, (0,255,255))\n",
+    "        cv2.imshow('video output', frame)\n",
+    "        if cv2.waitKey(1) == 27: # esc button ka numerical value \n",
+    "            break\n",
+    "    video.release()\n",
+    "    cv2.destroyAllWindows()\n",
+    "\n",
+    "# calling\n",
+    "webcam_w_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hand_detection(webcam_idx=0):\n",
+    " mp_drawing = mp.solutions.drawing_utils\n",
+    " mp_drawing_styles = mp.solutions.drawing_styles\n",
+    " mp_hands = mp.solutions.hands\n",
+    " cap = cv2.VideoCapture(0)\n",
+    " with mp_hands.Hands(model_complexity=0,min_detection_confidence=0.5,min_tracking_confidence=0.5) as hands:\n",
+    "  while cap.isOpened():\n",
+    "    success, image = cap.read()\n",
+    "    if not success:\n",
+    "      print(\"Ignoring empty camera frame.\")\n",
+    "      # If loading a video, use 'break' instead of 'continue'.\n",
+    "      continue\n",
+    "    image.flags.writeable = False\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    results = hands.process(image)\n",
+    "    image.flags.writeable = True\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
+    "    if results.multi_hand_landmarks:\n",
+    "      for hand_landmarks in results.multi_hand_landmarks:\n",
+    "          mp_drawing.draw_landmarks(image,hand_landmarks,\n",
+    "          mp_hands.HAND_CONNECTIONS,\n",
+    "          mp_drawing_styles.get_default_hand_landmarks_style(),\n",
+    "          mp_drawing_styles.get_default_hand_connections_style())\n",
+    "          cv2.imshow('MediaPipe Hands', cv2.flip(image, 1))\n",
+    "    if cv2.waitKey(5) & 0xFF == 27:\n",
+    "      break\n",
+    "  cap.release()\n",
+    "  cv2.destroyAllWindows()\n",
+    "\n",
+    " #calling\n",
+    "hand_detection()   \n"
+   ]
   }
  ],
  "metadata": {
