--- a/datascience/spider2.ipynb
+++ b/datascience/spider2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,13 +51,281 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "https://www.flipkart.com/search?q=laptop&page=1\n",
+      "26 items found\n",
+      "Item skipped at index: 0\n",
+      "Item skipped at index: 1\n",
+      "Item skipped at index: 2\n",
+      "Item skipped at index: 3\n",
+      "Item skipped at index: 4\n",
+      "Item skipped at index: 5\n",
+      "Item skipped at index: 6\n",
+      "Item skipped at index: 7\n",
+      "Item skipped at index: 8\n",
+      "Item skipped at index: 9\n",
+      "Item skipped at index: 10\n",
+      "Item skipped at index: 11\n",
+      "Item skipped at index: 12\n",
+      "Item skipped at index: 13\n",
+      "Item skipped at index: 14\n",
+      "Item skipped at index: 15\n",
+      "Item skipped at index: 16\n",
+      "Item skipped at index: 17\n",
+      "Item skipped at index: 18\n",
+      "Item skipped at index: 19\n",
+      "Item skipped at index: 20\n",
+      "Item skipped at index: 21\n",
+      "Item skipped at index: 22\n",
+      "Item skipped at index: 23\n",
+      "Item skipped at index: 24\n",
+      "Item skipped at index: 25\n",
+      "All items extracted\n",
+      "https://www.flipkart.com/search?q=laptop&page=2\n",
+      "26 items found\n",
+      "Item skipped at index: 0\n",
+      "Item skipped at index: 1\n",
+      "Item skipped at index: 2\n",
+      "Item skipped at index: 3\n",
+      "Item skipped at index: 4\n",
+      "Item skipped at index: 5\n",
+      "Item skipped at index: 6\n",
+      "Item skipped at index: 7\n",
+      "Item skipped at index: 8\n",
+      "Item skipped at index: 9\n",
+      "Item skipped at index: 10\n",
+      "Item skipped at index: 11\n",
+      "Item skipped at index: 12\n",
+      "Item skipped at index: 13\n",
+      "Item skipped at index: 14\n",
+      "Item skipped at index: 15\n",
+      "Item skipped at index: 16\n",
+      "Item skipped at index: 17\n",
+      "Item skipped at index: 18\n",
+      "Item skipped at index: 19\n",
+      "Item skipped at index: 20\n",
+      "Item skipped at index: 21\n",
+      "Item skipped at index: 22\n",
+      "Item skipped at index: 23\n",
+      "Item skipped at index: 24\n",
+      "Item skipped at index: 25\n",
+      "All items extracted\n",
+      "https://www.flipkart.com/search?q=laptop&page=3\n",
+      "26 items found\n",
+      "Item skipped at index: 0\n",
+      "Item skipped at index: 1\n",
+      "Item skipped at index: 2\n",
+      "Item skipped at index: 3\n",
+      "Item skipped at index: 4\n",
+      "Item skipped at index: 5\n",
+      "Item skipped at index: 6\n",
+      "Item skipped at index: 7\n",
+      "Item skipped at index: 8\n",
+      "Item skipped at index: 9\n",
+      "Item skipped at index: 10\n",
+      "Item skipped at index: 11\n",
+      "Item skipped at index: 12\n",
+      "Item skipped at index: 13\n",
+      "Item skipped at index: 14\n",
+      "Item skipped at index: 15\n",
+      "Item skipped at index: 16\n",
+      "Item skipped at index: 17\n",
+      "Item skipped at index: 18\n",
+      "Item skipped at index: 19\n",
+      "Item skipped at index: 20\n",
+      "Item skipped at index: 21\n",
+      "Item skipped at index: 22\n",
+      "Item skipped at index: 23\n",
+      "Item skipped at index: 24\n",
+      "Item skipped at index: 25\n",
+      "All items extracted\n",
+      "https://www.flipkart.com/search?q=laptop&page=4\n",
+      "26 items found\n",
+      "Item skipped at index: 0\n",
+      "Item skipped at index: 1\n",
+      "Item skipped at index: 2\n",
+      "Item skipped at index: 3\n",
+      "Item skipped at index: 4\n",
+      "Item skipped at index: 5\n",
+      "Item skipped at index: 6\n",
+      "Item skipped at index: 7\n",
+      "Item skipped at index: 8\n",
+      "Item skipped at index: 9\n",
+      "Item skipped at index: 10\n",
+      "Item skipped at index: 11\n",
+      "Item skipped at index: 12\n",
+      "Item skipped at index: 13\n",
+      "Item skipped at index: 14\n",
+      "Item skipped at index: 15\n",
+      "Item skipped at index: 16\n",
+      "Item skipped at index: 17\n",
+      "Item skipped at index: 18\n",
+      "Item skipped at index: 19\n",
+      "Item skipped at index: 20\n",
+      "Item skipped at index: 21\n",
+      "Item skipped at index: 22\n",
+      "Item skipped at index: 23\n",
+      "Item skipped at index: 24\n",
+      "Item skipped at index: 25\n",
+      "All items extracted\n",
+      "https://www.flipkart.com/search?q=laptop&page=5\n",
+      "26 items found\n",
+      "Item skipped at index: 0\n",
+      "Item skipped at index: 1\n",
+      "Item skipped at index: 2\n",
+      "Item skipped at index: 3\n",
+      "Item skipped at index: 4\n",
+      "Item skipped at index: 5\n",
+      "Item skipped at index: 6\n",
+      "Item skipped at index: 7\n",
+      "Item skipped at index: 8\n",
+      "Item skipped at index: 9\n",
+      "Item skipped at index: 10\n",
+      "Item skipped at index: 11\n",
+      "Item skipped at index: 12\n",
+      "Item skipped at index: 13\n",
+      "Item skipped at index: 14\n",
+      "Item skipped at index: 15\n",
+      "Item skipped at index: 16\n",
+      "Item skipped at index: 17\n",
+      "Item skipped at index: 18\n",
+      "Item skipped at index: 19\n",
+      "Item skipped at index: 20\n",
+      "Item skipped at index: 21\n",
+      "Item skipped at index: 22\n",
+      "Item skipped at index: 23\n",
+      "Item skipped at index: 24\n",
+      "Item skipped at index: 25\n",
+      "All items extracted\n",
+      "https://www.flipkart.com/search?q=laptop&page=6\n",
+      "26 items found\n",
+      "Item skipped at index: 0\n",
+      "Item skipped at index: 1\n",
+      "Item skipped at index: 2\n",
+      "Item skipped at index: 3\n",
+      "Item skipped at index: 4\n",
+      "Item skipped at index: 5\n",
+      "Item skipped at index: 6\n",
+      "Item skipped at index: 7\n",
+      "Item skipped at index: 8\n",
+      "Item skipped at index: 9\n",
+      "Item skipped at index: 10\n",
+      "Item skipped at index: 11\n",
+      "Item skipped at index: 12\n",
+      "Item skipped at index: 13\n",
+      "Item skipped at index: 14\n",
+      "Item skipped at index: 15\n",
+      "Item skipped at index: 16\n",
+      "Item skipped at index: 17\n",
+      "Item skipped at index: 18\n",
+      "Item skipped at index: 19\n",
+      "Item skipped at index: 20\n",
+      "Item skipped at index: 21\n",
+      "Item skipped at index: 22\n",
+      "Item skipped at index: 23\n",
+      "Item skipped at index: 24\n",
+      "Item skipped at index: 25\n",
+      "All items extracted\n",
+      "https://www.flipkart.com/search?q=laptop&page=7\n",
+      "26 items found\n",
+      "Item skipped at index: 0\n",
+      "Item skipped at index: 1\n",
+      "Item skipped at index: 2\n",
+      "Item skipped at index: 3\n",
+      "Item skipped at index: 4\n",
+      "Item skipped at index: 5\n",
+      "Item skipped at index: 6\n",
+      "Item skipped at index: 7\n",
+      "Item skipped at index: 8\n",
+      "Item skipped at index: 9\n",
+      "Item skipped at index: 10\n",
+      "Item skipped at index: 11\n",
+      "Item skipped at index: 12\n",
+      "Item skipped at index: 13\n",
+      "Item skipped at index: 14\n",
+      "Item skipped at index: 15\n",
+      "Item skipped at index: 16\n",
+      "Item skipped at index: 17\n",
+      "Item skipped at index: 18\n",
+      "Item skipped at index: 19\n",
+      "Item skipped at index: 20\n",
+      "Item skipped at index: 21\n",
+      "Item skipped at index: 22\n",
+      "Item skipped at index: 23\n",
+      "Item skipped at index: 24\n",
+      "Item skipped at index: 25\n",
+      "All items extracted\n",
+      "https://www.flipkart.com/search?q=laptop&page=8\n",
+      "26 items found\n",
+      "Item skipped at index: 0\n",
+      "Item skipped at index: 1\n",
+      "Item skipped at index: 2\n",
+      "Item skipped at index: 3\n",
+      "Item skipped at index: 4\n",
+      "Item skipped at index: 5\n",
+      "Item skipped at index: 6\n",
+      "Item skipped at index: 7\n",
+      "Item skipped at index: 8\n",
+      "Item skipped at index: 9\n",
+      "Item skipped at index: 10\n",
+      "Item skipped at index: 11\n",
+      "Item skipped at index: 12\n",
+      "Item skipped at index: 13\n",
+      "Item skipped at index: 14\n",
+      "Item skipped at index: 15\n",
+      "Item skipped at index: 16\n",
+      "Item skipped at index: 17\n",
+      "Item skipped at index: 18\n",
+      "Item skipped at index: 19\n",
+      "Item skipped at index: 20\n",
+      "Item skipped at index: 21\n",
+      "Item skipped at index: 22\n",
+      "Item skipped at index: 23\n",
+      "Item skipped at index: 24\n",
+      "Item skipped at index: 25\n",
+      "All items extracted\n",
+      "https://www.flipkart.com/search?q=laptop&page=9\n",
+      "Could not find target section with this div and {'class': '_1YokD2 _3Mn1Gg'}\n",
+      "'NoneType' object is not iterable\n",
+      "https://www.flipkart.com/search?q=laptop&page=9\n",
+      "Could not find target section with this div and {'class': '_1YokD2 _3Mn1Gg'}\n",
+      "'NoneType' object is not iterable\n",
+      "https://www.flipkart.com/search?q=laptop&page=9\n",
+      "26 items found\n",
+      "Item skipped at index: 0\n",
+      "Item skipped at index: 1\n",
+      "Item skipped at index: 2\n",
+      "Item skipped at index: 3\n",
+      "Item skipped at index: 4\n",
+      "Item skipped at index: 5\n",
+      "Item skipped at index: 6\n",
+      "Item skipped at index: 7\n",
+      "Item skipped at index: 8\n",
+      "Item skipped at index: 9\n",
+      "Item skipped at index: 10\n",
+      "Item skipped at index: 11\n",
+      "Item skipped at index: 12\n",
+      "Item skipped at index: 13\n",
+      "Item skipped at index: 14\n",
+      "Item skipped at index: 15\n",
+      "Item skipped at index: 16\n",
+      "Item skipped at index: 17\n",
+      "Item skipped at index: 18\n",
+      "Item skipped at index: 19\n",
+      "Item skipped at index: 20\n",
+      "Item skipped at index: 21\n",
+      "Item skipped at index: 22\n",
+      "Item skipped at index: 23\n",
+      "Item skipped at index: 24\n",
+      "Item skipped at index: 25\n",
+      "All items extracted\n",
+      "https://www.flipkart.com/search?q=laptop&page=10\n",
       "26 items found\n",
       "Item skipped at index: 0\n",
       "Item skipped at index: 1\n",
@@ -90,13 +358,38 @@
     }
    ],
    "source": [
-    "soup=sc.get_webpage_data(url)\n",
-    "output=sc.extract_many(soup,\n",
-    "                target=target,items=items,\n",
-    "                title= title,price=price,\n",
-    "                rr=rr,link=link,\n",
-    "                img_link=img_link,details=details)\n",
-    "               "
+    "query = 'laptop'\n",
+    "page = 1\n",
+    "all_output = []\n",
+    "page_limit = 10\n",
+    "while True:\n",
+    "    url = f\"https://www.flipkart.com/search?q={query}&page={page}\"\n",
+    "    print(url)\n",
+    "    soup = sc.get_webpage_data(url)\n",
+    "    try:\n",
+    "        output= sc.extract_many(soup,\n",
+    "                target = target, items = items,\n",
+    "                title = title, price = price,\n",
+    "                rr = rr, link = link,\n",
+    "                img_link = img_link, details = details)\n",
+    "        all_output.extend(output)\n",
+    "        page += 1\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        continue\n",
+    "    if page > page_limit:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "pd.DataFrame(all_output).to_csv(f'flipkart_{query}_Aug_22.csv')"
    ]
   }
  ],
